--- a/.github/workflows/stagecicd.yml
+++ b/.github/workflows/stagecicd.yml
@@ -71,13 +71,13 @@ jobs:
        cat ./DevOps/pipeline/vars/${{ github.repository }}/PRODUCTION.txt | cut -d '=' -f 1   
     - name: copy the env file to the deployment server
       run: |
-        DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
-        ls -ltra 
+ #       DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
+       # ls -ltra 
         #mv .env_staging .env_$DIR
-        SSH_KEY_FILE=$(mktemp)
-        echo "${{ secrets.SSH_KEY_STAGE }}" > "$SSH_KEY_FILE"
-        chmod 600 "$SSH_KEY_FILE"
-        scp -i "$SSH_KEY_FILE" -o StrictHostKeyChecking=no .env_$DIR ${{ secrets.SSH_USER }}@${{ secrets.STAGE_HOST }}:/tmp/
+       # SSH_KEY_FILE=$(mktemp)
+       # echo "${{ secrets.SSH_KEY_STAGE }}" > "$SSH_KEY_FILE"
+       # chmod 600 "$SSH_KEY_FILE"
+       #scp -i "$SSH_KEY_FILE" -o StrictHostKeyChecking=no .env_$DIR ${{ secrets.SSH_USER }}@${{ secrets.STAGE_HOST }}:/tmp/
     - name: Convert repository name to lowercase
       run: |
         echo "REPO_LOWERCASE=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
