--- a/.github/workflows/stagecicd.yml
+++ b/.github/workflows/stagecicd.yml
@@ -61,8 +61,8 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         ssh-agent sh -c 'ssh-add ~/.ssh/id_rsa; git clone git@github.com:ShihaanTechGlobal/DevOps.git'
-      # DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
-     #  cat ./DevOps/pipeline/vars/${{ github.repository }}/STAGING.txt >> .env_staging
+        #DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
+        #cat ./DevOps/pipeline/vars/${{ github.repository }}/STAGING.txt >> .env_staging
     - name: Printing full list of secret variables in STAGING
       run: |
         cat ./DevOps/pipeline/vars/${{ github.repository }}/STAGING.txt | cut -d '=' -f 1   
@@ -71,13 +71,13 @@ jobs:
        cat ./DevOps/pipeline/vars/${{ github.repository }}/PRODUCTION.txt | cut -d '=' -f 1   
     - name: copy the env file to the deployment server
       run: |
- #       DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
-       # ls -ltra 
-        #mv .env_staging .env_$DIR
-       # SSH_KEY_FILE=$(mktemp)
-       # echo "${{ secrets.SSH_KEY_STAGE }}" > "$SSH_KEY_FILE"
-       # chmod 600 "$SSH_KEY_FILE"
-       #scp -i "$SSH_KEY_FILE" -o StrictHostKeyChecking=no .env_$DIR ${{ secrets.SSH_USER }}@${{ secrets.STAGE_HOST }}:/tmp/
+        DIR=$(echo ${{ github.repository }} | cut -d'/' -f2)
+        ls -ltra 
+        mv .env_staging .env_$DIR
+        SSH_KEY_FILE=$(mktemp)
+        echo "${{ secrets.SSH_KEY_STAGE }}" > "$SSH_KEY_FILE"
+        chmod 600 "$SSH_KEY_FILE"
+        scp -i "$SSH_KEY_FILE" -o StrictHostKeyChecking=no .env_$DIR ${{ secrets.SSH_USER }}@${{ secrets.STAGE_HOST }}:/tmp/
     - name: Convert repository name to lowercase
       run: |
         echo "REPO_LOWERCASE=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -97,4 +97,5 @@ jobs:
           sudo docker pull ${{ vars.STG_ACR_URL }}/${{ env.REPO_LOWERCASE }}:${{ github.sha }}
           sudo docker stop ${{ env.CONTAINER_NAME }} || true
           sudo docker rm ${{ env.CONTAINER_NAME }} || true
-          sudo docker run --restart=always -d --name ${{ env.CONTAINER_NAME }} --env-file /tmp/.env_$DIR -p ${{ vars.HOST_PORT }}:${{ vars.CONTAINER_PORT }} ${{ vars.STG_ACR_URL }}/${{ env.REPO_LOWERCASE }}:${{ github.sha }}
+          sudo docker run --restart=always -d --name ${{ env.CONTAINER_NAME }} --env-file /tmp/.env_$DIR -p ${{ vars.HOST_PORT }}:${{ vars.CONTAINER_PORT }} ${{ vars.STG_ACR_URL }}/${{ env.REPO_LOWERCASE }}:${{ github.sha }}    
+      
